--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,9 @@
 
 <% @posts.each do |post| %>
   <div class="post_wrapper">
-    <h2 class="title"><%= link_to post.title, post %> </h2>
+    <h2 class="title"><%= link_to post.title, post %> 
+    </h2>
+    <p class="author">by <%= User.find(post.user_id).first_name %>
     <p class="date"><%=post.created_at.strftime("%B, %d, %Y")%></p>
   </div>
 <% end%>
