--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,14 @@
-<%= form_for([@post, @post.comments.build]) do |f| %>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-  <br>
-  <%= f.submit %>
-<%end%>
+<div class="col-md-4">
+  <%= form_for([@post, @post.comments.build]) do |f| %>
+    <p>
+      <%= f.label :name %><br>
+      <%= f.text_field :name, class: 'form-control' %>
+    </p>
+    <p>
+      <%= f.label :body %><br>
+      <%= f.text_area :body, rows: 8, class: 'form-control' %>
+    </p>
+    <br>
+    <%= f.submit "Save Comment", class: 'btn btn-success' %>
+  <%end%>
+</div>
