--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,32 @@
-<h1 class="title">
-	<%= @post.title %>
-</h1>
+<div class="col-md-8">
+<div class="panel panel-default">
+  <h1 class="title panel-heading" ">
+  	<%= @post.title %>
+  </h1>
 
-<p class="date">
-	Created <%= time_ago_in_words(@post.created_at) %> Ago
-</p>
 
-<p class="body">
+<i class="date" >
+	Created <%= time_ago_in_words(@post.created_at) %> ago
+</i><br />
+
+<p class="body panel-content">
 	<%= @post.body %>
 </p>
-
-<div id="comments">
-  <h2><%= @post.comments.count %> Comments </h2>
-  <%= render @post.comments %>
-
+</div>
+<div class="panel panel-info">
+  <div class= "panel-heading" id="comments">
+    <h3><%= @post.comments.count %> Comments </h3>
+  </div>
+  <div class= "panel-content">
+    <%= render @post.comments %>
+  </div>
+</div>
+<div class= "col-md-8">
   <h3>Add a comment: </h3>
   <%= render "comments/form" %>
+</div>
+<div class= "col-md-4">
+  <%= link_to 'Go Back to HomePage', root_path, :class => 'btn btn-primary pull-right' %>
+</div>
+</div>
+
