--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,11 @@
 <p class="comment_name">
-  <%= comment.name %>
+  by <%= comment.name %>
 
 </p>
 <p class="comment_body">
   <%= comment.body %>
 </p>
 <p class="comment_time">
-  <%= time_ago_in_words(comment.created_at) %> Ago
+  <i><%= time_ago_in_words(comment.created_at) %> ago </i>
 </p>
+<br />
